<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginTop="15dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="5dp">


    <LinearLayout
        android:id="@+id/jwgl_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/ett_jwgl_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jwgl_id" />

        <EditText
            android:id="@+id/ett_jwgl_login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/jwgl_pass" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivw_jwgl_login_code"
                android:layout_width="90dp"
                android:layout_height="43dp"
                android:layout_marginStart="5dp"
                app:srcCompat="@drawable/ban" />

            <EditText
                android:id="@+id/ett_jwgl_login_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_code"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/btn_jwgl_login_quit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:layout_weight="1"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_jwgl_login_ok"
                android:layout_width="0dp"
                android:layout_marginLeft="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <com.daimajia.numberprogressbar.NumberProgressBar
            android:id="@+id/npb_jwgl"
            style="@style/NumberProgressBar_Funny_Orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>