<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:id="@+id/view_login"
    android:focusableInTouchMode="true"
    tools:context="com.twinkle.train.LoginActivity">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="120dp"
                app:srcCompat="@drawable/pic"
                android:layout_weight="0.79" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvw_login_fps"
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/forget_pass" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                android:id="@+id/tvw_login_fsh"
                android:layout_marginTop="15dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/finish" />

                <TextView
                    android:id="@+id/tvw_login_re"
                    android:layout_width="0dp"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/register" />


            </LinearLayout>


            <TextView
                android:id="@+id/tvw_login_err"
                android:layout_marginTop="25dp"
               android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="19sp"
                android:layout_marginBottom="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.79"
                 />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
