<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Video_InfoActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/info_tbr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/Base.Theme.AppCompat.Light.DarkActionBar"
            app:navigationIcon="?android:attr/homeAsUpIndicator" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <com.loopj.android.image.SmartImageView
                        android:id="@+id/info_svw_pic"
                        android:layout_width="150dp"
                        android:layout_height="180dp"
                        android:background="@drawable/example" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/info_tvw_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_movie"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/info_tvw_tag"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tag" />

                        <TextView
                            android:id="@+id/info_tvw_episode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/rvw_info"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <Spinner
                            android:id="@+id/spinner1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/info_tvw_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/rvw_info"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>
